Using the Job framework to have less modal windows